laravel/my-laravel-app-service.yaml
# my-laravel-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-laravel-app
  labels:
    app: my-laravel-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: my-laravel-app
