laravel/my-laravel-app-ingress.yaml
# my-laravel-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-laravel-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: crm-icetechnology.com.ve
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-laravel-app
            port:
              name: http
